namespace Common.Enums
{
    public static class ControlEnum
    {
        public const string Interact = "Interact";
        public const string Attack = "Attack";
        public const string Attack1 = "Attack1";
        public const string Jump = "Jump";
        public const string RunQuick = "RunQuick";
        public const string Move = "Move";
        public const string Look = "Look";
        public const string DrawWeapon = "DrawWeapon";

    }
}